FullSb1-27-apr-15/src/objects/HULT_API_Log__c.object
<CustomObject>
    <description>SFSUP-734 
This object stores API error logs made to HULT created Webservices.</description>
    <fields>
        <fullName>Callout_Time__c</fullName>
        <description>Time at which API callout is done.</description>
        <label>Callout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndPoint_URL__c</fullName>
        <description>Endpoint to which API callout is done.</description>
        <label>EndPoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>API Callout failed for which Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HULT API Logs</relationshipLabel>
        <relationshipName>HULT_API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>API Callout failure response - status code.</description>
        <label>Status Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>API Callout failure Message</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HULT API Log</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HULT API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>